test/lit/pto/trowarg_tmp_contract_a3_invalid.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// RUN: not ptoas --pto-arch=a3 --emit-pto-ir %s 2>&1 | FileCheck %s

module attributes {"pto.device-spec" = "Ascend910B3"} {
  func.func @a3_trowargmax_tmp_too_small() attributes {pto.kernel_kind = #pto.kernel_kind<vector>} {
    %src = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=f32, rows=16, cols=128, v_row=13, v_col=127, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    %tmp = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=f32, rows=16, cols=8, v_row=13, v_col=8, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    %dst = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=ui32, rows=16, cols=1, v_row=13, v_col=1, blayout=col_major, slayout=none_box, fractal=512, pad=0>
    pto.trowargmax ins(%src, %tmp : !pto.tile_buf<loc=vec, dtype=f32, rows=16, cols=128, v_row=13, v_col=127, blayout=row_major, slayout=none_box, fractal=512, pad=0>, !pto.tile_buf<loc=vec, dtype=f32, rows=16, cols=8, v_row=13, v_col=8, blayout=row_major, slayout=none_box, fractal=512, pad=0>)
                   outs(%dst : !pto.tile_buf<loc=vec, dtype=ui32, rows=16, cols=1, v_row=13, v_col=1, blayout=col_major, slayout=none_box, fractal=512, pad=0>)
    return
  }
}

// CHECK: error: 'pto.trowargmax' op expects A2/A3 tmp valid_shape[1] to be at least 16 for src valid_shape[1] = 127
